# showtimes-rs

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE-AGPL  README.md  compose.yaml  config.toml.example
.cargo/: audit.toml
scripts/: check_dependency_graph.py  copy-aws-fips.py
showtimes/: Cargo.toml  README.md  build.rs
showtimes/src/: main.rs  onion.rs  state.rs  tasks.rs
showtimes/src/routes/: graphql.rs  image.rs  mod.rs  oauth2.rs
showtimes_db/: Cargo.toml  README.md
showtimes_db/src/: errors.rs  lib.rs  macros.rs
showtimes_db/src/models/: common.rs  migrations.rs  mod.rs  project.rs  rss.rs  server.rs  users.rs  webhooks.rs
showtimes_derive/: Cargo.toml  README.md
showtimes_derive/src/: enums.rs  events.rs  lib.rs  search.rs  shows.rs
showtimes_events/: Cargo.toml  README.md
showtimes_events/src/: brokers.rs  lib.rs  streams.rs
showtimes_events/src/models/: collabs.rs  common.rs  mod.rs  projects.rs  rss.rs  servers.rs  timestamp.rs  users.rs
showtimes_fansubdb/: Cargo.toml  README.md
showtimes_fs/: Cargo.toml  README.md
showtimes_fs/src/: errors.rs  lib.rs  local.rs  s3.rs
showtimes_gql/: Cargo.toml  README.md
showtimes_gql/common/: Cargo.toml
showtimes_gql/common/src/: data_loader.rs  errors.rs  guard.rs  image.rs  lib.rs  queries.rs
showtimes_gql/events/: Cargo.toml
showtimes_gql/events/src/: collaborations.rs  executor.rs  expand.rs  lib.rs  prelude.rs  projects.rs  rss.rs  servers.rs  users.rs
showtimes_gql/events_models/: Cargo.toml
showtimes_gql/events_models/src/: collaborations.rs  lib.rs  prelude.rs  projects.rs  rss.rs  servers.rs  users.rs
showtimes_gql/models/: Cargo.toml
showtimes_gql/models/src/: collaborations.rs  common.rs  lib.rs  projects.rs  rss.rs  search.rs  servers.rs  stats.rs  users.rs
showtimes_gql/mutations/: Cargo.toml
showtimes_gql/mutations/src/: collaborations.rs  common.rs  lib.rs  projects.rs  rss.rs  servers.rs  users.rs
showtimes_gql/paginator/: Cargo.toml
showtimes_gql/paginator/src/: lib.rs  projects.rs  servers.rs  users.rs
showtimes_gql/queries/: Cargo.toml
showtimes_gql/queries/src/: lib.rs
showtimes_gql/src/: data_loader.rs  expand.rs  guard.rs  image.rs  lib.rs
showtimes_gql/src/models/: collaborations.rs  errors.rs  mod.rs  prelude.rs  projects.rs  search.rs  servers.rs  stats.rs  users.rs
showtimes_gql/src/models/events/: collaborations.rs  mod.rs  prelude.rs  projects.rs  servers.rs  users.rs
showtimes_gql/src/mutations/: collaborations.rs  mod.rs  projects.rs  servers.rs  users.rs
showtimes_gql/src/queries/: mod.rs  projects.rs  servers.rs  users.rs
showtimes_gql/subscriptions/: Cargo.toml
showtimes_gql/subscriptions/src/: executor.rs  expand.rs  lib.rs
showtimes_i18n/: Cargo.toml  README.md
showtimes_i18n/locales/id-ID/: webhooks.ftl
showtimes_i18n/locales/ja-JP/: webhooks.ftl
showtimes_i18n/locales/jv-ID/: common.ftl
showtimes_i18n/src/: lib.rs
showtimes_i18n/tests/: test_i18n.rs
showtimes_metadata/: Cargo.toml  README.md
showtimes_metadata/src/: errors.rs  image.rs  lib.rs
showtimes_metadata/src/models/: anilist.rs  mod.rs  tmdb.rs  vndb.rs
showtimes_metadata/src/providers/: anilist.rs  mod.rs  tmdb.rs  vndb.rs
showtimes_migrate/: Cargo.toml  README.md
showtimes_migrate/src/: cli.rs  common.rs  create.rs  main.rs  runner.rs
showtimes_migrate/src/migrations/: m20240725045840_init.rs  m20240726055250_update_covers.rs  m20240821113204_fallback_images_invalids.rs  m20240916075925_clickhouse_init.rs  m20241026154029_project_status_field.rs  m20250125075556_update_users_api_key.rs  mod.rs
showtimes_migrate/src/models/: mod.rs  projects.rs  servers.rs  users.rs
showtimes_models/: Cargo.toml
showtimes_rss/: Cargo.toml  README.md
showtimes_rss/src/: lib.rs  manager.rs  markdown.rs  template.rs
showtimes_search/: Cargo.toml  README.md
showtimes_search/src/: lib.rs  models.rs
showtimes_session/: Cargo.toml  README.md
showtimes_session/src/: lib.rs  manager.rs  signer.rs
showtimes_session/src/oauth2/: discord.rs  mod.rs
showtimes_shared/: Cargo.toml  README.md
showtimes_shared/src/: config.rs  lib.rs  markdown.rs
showtimes_webhooks/: Cargo.toml  README.md
showtimes_webhooks/src/engine/: discord.rs  mod.rs
