[workspace]
resolver = "2"
members = [
    # Library
    "showtimes_db",
    "showtimes_fs",
    "showtimes_gql",
    "showtimes_metadata",
    "showtimes_search",
    "showtimes_session",
    "showtimes_shared",
    "showtimes_derive",

    # Binary
    "showtimes_migrate",
    "showtimes", "showtimes_events",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MPL-2.0"
repository = "https://github.com/naoTimesdev/showtimes-rs"
homepage = "https://naoti.me"
rust-version = "1.80" # MSRV to 1.80 because of `LazyLock` stability

[workspace.dependencies]
# Essential stuff
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = { version = "0.8.19", features = ["preserve_order"] }
uuid = { version = "1.10.0", features = ["v7", "fast-rng"] }
ulid = "1.1.3"
urlencoding = "2.1.3"
chrono = "0.4.38"
time = "0.3.36"
anyhow = "1"
futures = "0.3.30"
tosho-macros = "0.3"

# File server
mime_guess = "2.0.5"
rusty-s3 = { version = "0.5.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }

# Web server
axum = { version = "0.7.5", features = ["ws", "tracing"] }
async-graphql = { version = "7.0.9", default-features = false, features = ["tracing", "bson", "unblock", "dataloader", "altair", "tempfile"] }
async-graphql-axum = "7.0.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Database
mongodb = { version = "3.1.0", features = ["rustls-tls", "tracing-unstable"] }
bson = { version = "2.12.0", features = ["chrono-0_4"] }
redis = { version = "0.27.2", features = ["tokio-comp"] }
clickhouse = { version = "0.12.2", features = ["uuid", "time"] }
meilisearch-sdk = "0.27.1"
jsonwebtoken = { version = "9.3.0", default-features = false }

# FansubRSS/Network
reqwest = { version = "0.12.7", features = ["rustls-tls", "http2", "json"] }
feed-rs = "2.1.0"
pulldown-cmark = "0.12.1"

# CI-PROFILE-MARK

[profile.dev]
lto = "thin"
debug = true
debug-assertions = true

# Release profile for standard release mode for development purpose
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 16
incremental = false

# Optimized profile is the one used in production
[profile.production]
inherits = "release"
opt-level = "s"
codegen-units = 1
incremental = false

# Package specific configuration
## Showtimes Shared
[profile.release.package.showtimes-shared]
opt-level = "s"
codegen-units = 1

## Showtimes Session
[profile.release.package.showtimes-session]
opt-level = "s"
codegen-units = 1

## Showtimes Search
[profile.release.package.showtimes-search]
opt-level = "s"
codegen-units = 1

## Showtimes Metadata
[profile.release.package.showtimes-metadata]
opt-level = "s"
codegen-units = 1

## Showtimes GraphQL
[profile.release.package.showtimes-gql]
opt-level = "s"
codegen-units = 1

## Showtimes Filesystem
[profile.release.package.showtimes-fs]
opt-level = "s"
codegen-units = 1

## Showtimes Events
[profile.release.package.showtimes-events]
opt-level = "s"
codegen-units = 1

## Showtimes Derive
[profile.release.package.showtimes-derive]
opt-level = "s"
codegen-units = 1

## Showtimes Database
[profile.release.package.showtimes-db]
opt-level = "s"
codegen-units = 1

[patch.crates-io]
# Use git version for rusty-s3
rusty-s3 = { git = "https://github.com/paolobarbolini/rusty-s3.git", rev = "9b3ea2f1862a2b92af2f9b7604052e2ff3b2f2d1" }
