[workspace]
resolver = "2"
members = [
    # Library
    "showtimes_db",
    "showtimes_fs",
    "showtimes_gql/common",
    "showtimes_gql/events",
    "showtimes_gql/events_models",
    "showtimes_gql/models",
    "showtimes_gql/mutations",
    "showtimes_gql/paginator",
    "showtimes_gql/queries",
    "showtimes_gql/subscriptions",
    "showtimes_metadata",
    "showtimes_search",
    "showtimes_events",
    "showtimes_rss",
    "showtimes_fansubdb",
    "showtimes_webhooks",
    "showtimes_session",
    "showtimes_shared",
    "showtimes_i18n",
    "showtimes_derive",

    # Binary
    "showtimes_migrate",
    "showtimes",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MPL-2.0"
repository = "https://github.com/naoTimesdev/showtimes-rs"
homepage = "https://naoti.me"
rust-version = "1.85"

[workspace.dependencies]
# Essential stuff
anyhow = "1"
ahash = "0.8.12"
jiff = { version = "0.2.15", default-features = false, features = [
    "std",
    "alloc",
    "serde",
    "tz-system",
    "tz-fat",
    "tzdb-bundle-platform",
    "tzdb-zoneinfo",
] }
ulid = "1.2.1"
uuid = { version = "1.17.0", default-features = false, features = ["v4", "v7", "fast-rng"] }
rustc-hash = { version = "2.1.1", features = ["std"] }

# Serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"

# Parsing data
nom = "8.0.0"
toml = { version = "0.8.23", default-features = false, features = ["parse", "preserve_order"] }
fastnomicon = { git = "https://github.com/naoTimesdev/fastnomicon.git", version = "0.2.0", default-features = false }

# Async/Futures
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tokio-cron-scheduler = "0.14.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
futures-channel = { version = "0.3.31", default-features = false, features = ["std"] }
async-trait = "0.1.88"

# File server
mime_guess = "2.0.5"
rusty-s3 = { version = "0.7.0", features = ["full"] }
slab = "0.4.10"

# Image related
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
kmeans_colors = { version = "0.7.0", default-features = false, features = ["palette_color"] }
palette = { version = "0.7.6", default-features = false, features = ["std"] }

# Web server
axum = { version = "0.8.4", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "tokio",
    "tower-log",
    "tracing",
    "ws",
] }
axum-extra = { version = "0.10.1", default-features = false, features = ["tracing", "async-read-body"] }
async-graphql = { version = "7.0.17", default-features = false, features = [
    "tracing",
    "unblock",
    "dataloader",
    "dataloader_ahash",
    "graphiql",
    "tempfile",
] }
async-graphql-axum = "7.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower-service = "0.3.3"
tower-layer = "0.3.3"
urlencoding = "2.1.3"

# Database
mongodb = { version = "3.2.3", default-features = false, features = ["compat-3-0-0", "rustls-tls"] }
bson = { version = "2.15.0" }
redis = { version = "0.32.2", default-features = false, features = ["acl", "keep-alive", "tokio-comp"] }
clickhouse = { version = "0.13.3", default-features = false, features = ["lz4", "uuid"] }
meilisearch-sdk = "0.28.0"
jwt-lc-rs = { git = "https://github.com/noaione/jwt-lc-rs.git", rev = "97fad60b561991619abe9f22b3ef8d79a035a8d3", features = [
    "pem"
] }

# FansubRSS/Network
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.20", default-features = false, features = [
    "charset",
    "macos-system-configuration",
    "rustls-tls",
    "http2",
    "json"
] }
feed-rs = { version = "2.3.1", features = ["sanitize"] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
pulldown-cmark-escape = "0.11.0"
htmd = "0.2.2"

# i18n
fluent-templates = { version = "0.13.0", features = ["macros"] }

# CLI
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"

[profile.dev]
lto = "thin"
debug = true
debug-assertions = true

# Release profile for standard release mode for development purpose
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 16
incremental = false

# Optimized profile is the one used in production
[profile.production]
inherits = "release"
opt-level = "s"
codegen-units = 1
incremental = false

# Package specific configuration
## Showtimes Shared
[profile.release.package.showtimes-shared]
opt-level = "s"
codegen-units = 1

## Showtimes Session
[profile.release.package.showtimes-session]
opt-level = "s"
codegen-units = 1

## Showtimes Search
[profile.release.package.showtimes-search]
opt-level = "s"
codegen-units = 1

## Showtimes Metadata
[profile.release.package.showtimes-metadata]
opt-level = "s"
codegen-units = 1

## Showtimes GraphQL
[profile.release.package.showtimes-gql-common]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-models]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-events]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-events-models]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-paginator]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-queries]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-mutations]
opt-level = "s"
codegen-units = 1

[profile.release.package.showtimes-gql-subscriptions]
opt-level = "s"
codegen-units = 1

## Showtimes Filesystem
[profile.release.package.showtimes-fs]
opt-level = "s"
codegen-units = 1

## Showtimes Events
[profile.release.package.showtimes-events]
opt-level = "s"
codegen-units = 1

## Showtimes Derive
[profile.release.package.showtimes-derive]
opt-level = "s"
codegen-units = 1

## Showtimes Database
[profile.release.package.showtimes-db]
opt-level = "s"
codegen-units = 1

## Showtimes Database
[profile.release.package.showtimes-fansubdb]
opt-level = "s"
codegen-units = 1

[patch.crates-io]
async-graphql = { git = "https://github.com/naoTimesdev/async-graphql.git", rev = "5d275c589914da34cf7e88343ba472b6b1b7474d" }
async-graphql-axum = { git = "https://github.com/naoTimesdev/async-graphql.git", rev = "5d275c589914da34cf7e88343ba472b6b1b7474d" }
