[package]
name = "showtimes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "The Showtimes API backend for naoTimes. A full-featured group management for translating a foreign-media to your languages!"

[dependencies]
# Essentials
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
toml.workspace = true
anyhow.workspace = true

# Web server
axum.workspace = true
axum-extra = { version = "0.9.3", features = ["async-read-body"] }
futures.workspace = true
async-graphql-axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tower-http.workspace = true
tower-service = "0.3.3"
tower-layer = "0.3.3"

# Showtimes related
showtimes-shared = { path = "../showtimes_shared" }
showtimes-db = { path = "../showtimes_db" }
showtimes-fs = { path = "../showtimes_fs" }
showtimes-gql = { path = "../showtimes_gql" }
showtimes-metadata = { path = "../showtimes_metadata" }
showtimes-search = { path = "../showtimes_search" }
showtimes-session = { path = "../showtimes_session" }
