[package]
name = "showtimes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "The Showtimes API backend for naoTimes. A full-featured group management for translating a foreign-media to your languages!"

[dependencies]
# Essentials
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
uuid.workspace = true
chrono.workspace = true

# Async/Tokio
tokio.workspace = true
tokio-cron-scheduler.workspace = true
futures-util.workspace = true

# Web server
axum.workspace = true
axum-extra.workspace = true
async-graphql-axum.workspace = true
tower-http.workspace = true
tower-service.workspace = true
tower-layer.workspace = true
reqwest.workspace = true

# Database
redis.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Showtimes related
showtimes-shared = { path = "../showtimes_shared" }
showtimes-db = { path = "../showtimes_db" }
showtimes-events = { path = "../showtimes_events" }
showtimes-fs = { path = "../showtimes_fs" }
showtimes-gql-common = { path = "../showtimes_gql/common" }
showtimes-gql-queries = { path = "../showtimes_gql/queries" }
showtimes-gql-mutations = { path = "../showtimes_gql/mutations" }
showtimes-gql-subscriptions = { path = "../showtimes_gql/subscriptions" }
showtimes-metadata = { path = "../showtimes_metadata" }
showtimes-rss = { path = "../showtimes_rss" }
showtimes-search = { path = "../showtimes_search" }
showtimes-session = { path = "../showtimes_session" }
