[package]
name = "showtimes-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "MongoDB models mapping for Showtimes Database"

[dependencies]
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true
futures.workspace = true

mongodb.workspace = true
bson.workspace = true

showtimes-shared = { path = "../showtimes_shared" }
showtimes-derive = { path = "../showtimes_derive" }
tosho-macros.workspace = true
