[package]
name = "showtimes-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "MongoDB models mapping for Showtimes Database"

[dependencies]
serde.workspace = true
jiff.workspace = true
url.workspace = true

futures-util.workspace = true

mongodb.workspace = true
jwt-lc-rs.workspace = true

showtimes-shared = { path = "../showtimes_shared" }
showtimes-derive = { path = "../showtimes_derive" }
