[package]
name = "showtimes-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A procedural macro for Showtimes API"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
mongodb.workspace = true

[lib]
proc-macro = true