[package]
name = "showtimes-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A procedural macro for Showtimes API"

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

ahash.workspace = true

convert_case = "0.6.0"

[dev-dependencies]
bson.workspace = true
serde.workspace = true

[lib]
proc-macro = true
