[package]
name = "showtimes-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Event storage and handling for Showtimes API"

[dependencies]
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
time.workspace = true
slab.workspace = true
uuid.workspace = true

tokio.workspace = true
futures-util.workspace = true
futures-channel.workspace = true

tracing.workspace = true

clickhouse.workspace = true

showtimes-shared = { path = "../showtimes_shared" }
showtimes-db = { path = "../showtimes_db" }
showtimes-derive = { path = "../showtimes_derive" }
showtimes-rss = { path = "../showtimes_rss" }
