[package]
name = "showtimes-fansubdb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "FansubDB Integration for Showtimes API"

[dependencies]
jiff.workspace = true
serde.workspace = true

reqwest.workspace = true
