[package]
name = "showtimes-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "File storage handler for Showtimes API"

[dependencies]
anyhow.workspace = true
chrono.workspace = true

tracing.workspace = true

tokio.workspace = true
futures-util.workspace = true

mime_guess.workspace = true
rusty-s3.workspace = true
reqwest.workspace = true

tosho-macros.workspace = true
