[package]
name = "showtimes-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "File storage handler for Showtimes API"

[dependencies]
chrono.workspace = true
# Need to expose this for rusty-s3
quick-xml = "0.37.1"

tracing.workspace = true

tokio.workspace = true
futures-util.workspace = true

mime_guess.workspace = true
rusty-s3.workspace = true
reqwest.workspace = true

tosho-macros.workspace = true
