[package]
name = "showtimes-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "File storage handler for Showtimes API"

[dependencies]
jiff.workspace = true
# Need to expose this for rusty-s3
quick-xml = "0.37.4"

tracing.workspace = true

tokio.workspace = true
futures-util.workspace = true

mime_guess.workspace = true
rusty-s3.workspace = true
reqwest.workspace = true

showtimes-derive = { path = "../showtimes_derive" }
