[package]
name = "showtimes-gql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Library for GraphQL definitions of Showtimes API"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
time.workspace = true
tracing.workspace = true
futures-util.workspace = true

async-graphql.workspace = true
reqwest.workspace = true
image.workspace = true

tokio-stream.workspace = true

# Showtimes related
showtimes-shared = { path = "../showtimes_shared" }
showtimes-derive = { path = "../showtimes_derive" }
showtimes-db = { path = "../showtimes_db" }
showtimes-events = { path = "../showtimes_events" }
showtimes-fs = { path = "../showtimes_fs" }
showtimes-metadata = { path = "../showtimes_metadata" }
showtimes-search = { path = "../showtimes_search" }
showtimes-session = { path = "../showtimes_session" }
tosho-macros.workspace = true
