[package]
name = "showtimes-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A library to fetch metadata information of a shows or books, data provided by Anilist and TMDB"

[dependencies]
jiff.workspace = true
nom.workspace = true
rustc-hash.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

image.workspace = true
kmeans_colors.workspace = true
palette.workspace = true

showtimes-derive = { path = "../showtimes_derive" }
