[package]
name = "showtimes-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A tools to migrate Showtimes database models and more"

[dependencies]
anyhow.workspace = true
jiff.workspace = true
serde.workspace = true
ahash.workspace = true

tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
dotenvy.workspace = true

mongodb.workspace = true
reqwest.workspace = true

showtimes-db = { path = "../showtimes_db" }
showtimes-events = { path = "../showtimes_events" }
showtimes-fs = { path = "../showtimes_fs" }
showtimes-search = { path = "../showtimes_search" }
showtimes-shared = { path = "../showtimes_shared" }

[[bin]]
name = "showtimes-migrate"
path = "src/main.rs"

[[bin]]
name = "showtimes-migrate-create"
path = "src/create.rs"
