[package]
name = "showtimes-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A simple wrapper for Showtimes API Meilisearch instance"

[dependencies]
serde.workspace = true
meilisearch-sdk.workspace = true

showtimes-shared = { path = "../showtimes_shared" }
showtimes-derive = { path = "../showtimes_derive" }
showtimes-db = { path = "../showtimes_db" }
