[package]
name = "showtimes-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared session utility for Showtimes API"

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

jsonwebtoken.workspace = true
redis.workspace = true

reqwest.workspace = true

# Showtimes related
showtimes-shared = { path = "../showtimes_shared" }
