[package]
name = "showtimes-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared utility for Showtimes API"

[dependencies]
anyhow.workspace = true
tokio.workspace = true

uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
bson.workspace = true

serde.workspace = true
toml.workspace = true

pulldown-cmark.workspace = true
pulldown-cmark-escape = "0.11.0"