[package]
name = "showtimes-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared utility for Showtimes API"

[dependencies]
tokio.workspace = true

uuid.workspace = true
ulid.workspace = true
bson.workspace = true
jiff.workspace = true

serde.workspace = true
serde_repr.workspace = true
toml.workspace = true
