[package]
name = "showtimes-webhooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Webhooks delivery for Showtimes API"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true

reqwest.workspace = true

thiserror = "2.0.12"
tokio.workspace = true

showtimes-db = { path = "../showtimes_db" }
showtimes-derive = { path = "../showtimes_derive" }
showtimes-shared = { path = "../showtimes_shared" }
showtimes-i18n = { path = "../showtimes_i18n" }
