[package]
name = "showtimes-webhooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Webhooks delivery for Showtimes API"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true

reqwest.workspace = true
tokio.workspace = true

showtimes-db = { path = "../showtimes_db" }
showtimes-derive = { path = "../showtimes_derive" }
showtimes-shared = { path = "../showtimes_shared" }
showtimes-i18n = { path = "../showtimes_i18n" }
