[package]
name = "showtimes-gql-events-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Events models library for GraphQL definitions of Showtimes API"

[dependencies]
chrono.workspace = true
time.workspace = true
serde.workspace = true

async-graphql.workspace = true

# Showtimes related
showtimes-shared = { path = "../../showtimes_shared" }
showtimes-db = { path = "../../showtimes_db" }
showtimes-events = { path = "../../showtimes_events" }
showtimes-rss = { path = "../../showtimes_rss" }

# GQL related
showtimes-gql-common = { path = "../common" }
showtimes-gql-models = { path = "../models" }
