[package]
name = "showtimes-gql-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Models library for GraphQL definitions of Showtimes API"

[dependencies]
chrono.workspace = true
url.workspace = true

tokio.workspace = true

async-graphql.workspace = true

# Showtimes related
showtimes-shared = { path = "../../showtimes_shared" }
showtimes-db = { path = "../../showtimes_db" }
showtimes-metadata = { path = "../../showtimes_metadata" }

# GQL related
showtimes-gql-common = { path = "../common" }
showtimes-gql-paginator = { path = "../paginator" }
