[package]
name = "showtimes-gql-paginator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Paginator library for GraphQL definitions of Showtimes API"

[dependencies]
serde.workspace = true

futures-util.workspace = true

async-graphql.workspace = true

# Showtimes related
showtimes-shared = { path = "../../showtimes_shared" }
showtimes-db = { path = "../../showtimes_db" }

# GQL related
showtimes-gql-common = { path = "../common" }
